<resources>
    <string name="app_name">Ma Réunion</string>
    <string name="activity_add_reunion">Nouvelle réunion</string>
    <string name="room_name">Salles disponibles :</string>
    <string name="reunion_name">Sujet de la Réunion</string>
    <string name="add_reunion">Ajouter Réunion</string>
    <string name="ajouter">Ajouter</string>
    <string name="fin">Fin</string>
    <string name="depart">Début</string>
    <string name="date">Date</string>
    <string name="toutes">Toutes</string>
    <string name="mario">Mario</string>
    <string name="luigi">Luigi</string>
    <string name="peach">Peach</string>
    <string name="date_string">%1$d/%2$d/%3$d</string>
    <string name="hour_string">%1$d:%2$d</string>
    <string name="meeting_time">Temps de réunion : %1$dh%2$d</string>
    <string name="editText_participant_empty">Veuillez ajouter un participant</string>
    <string name="editText_participant_notEmail">Veuillez entrer une adresse mail valide.</string>
    <string name="email_participant">Email du participant</string>
</resources>